--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "author": "ymarchys & dpolosuk",
   "license": "ISC",
   "dependencies": {
+    "nes.css": "^2.2.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
