--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "mocha": "^6.2.1",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "nyc": "^14.1.1"
   }
 }
