--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "nes.css": "^2.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.10.2",
@@ -30,6 +31,9 @@
     "@types/node": "^12.7.11",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "^4.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
