--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,23 @@
   "author": "ymarchys & dpolosuk",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "nes.css": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-audio-player": "^0.11.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.10.2",
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-sound": "^1.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "soundmanager2": "^2.97.20170602"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
