--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "nes.css": "^2.2.1",
     "prop-types": "^15.7.2",
