--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "watch": "webpack --watch --progress --hide-modules"
+    "watch": "webpack --watch --progress --hide-modules --config webpack.dev.js"
   },
   "author": "ymarchys & dpolosuk",
   "license": "ISC",
