--- a/client/.env
+++ b/client/.env
@@ -3,5 +3,5 @@ PORT = 3000
 IO_SERVER_PORT = 3001
 HOST = localhost
 
-MONGODB_URI = localhost:27017
+MONGODB_URI = mongodb://localhost:27017
 MONGODB_NAME = red_tetris
