--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "build": "rm -rf dist && webpack --mode production",
     "dev": "nodemon --exec babel-node src/index.js",
     "start": "node dist/server.js",
-    "test": "mocha --require @babel/register"
+    "test": "nyc mocha --require @babel/register"
   },
   "author": "ymarchys & dpolosuk",
   "license": "ISC",
@@ -16,7 +16,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
