--- a/client/package.json
+++ b/client/package.json
@@ -40,18 +40,19 @@
     "@babel/register": "^7.6.2",
     "@types/node": "^12.7.11",
     "babel-loader": "^8.0.6",
+    "chai": "^4.2.0",
     "css-loader": "^3.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "^4.2.0",
+    "mocha": "^6.2.2",
+    "mocha-loader": "^4.0.1",
     "node-sass": "^4.12.0",
+    "nyc": "^14.1.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "chai": "^4.2.0",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1"
+    "webpack-cli": "^3.3.9"
   }
 }
