--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.1.2",
     "react-sound": "^1.2.0",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "soundmanager2": "^2.97.20170602"
