--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "dotenv": "^8.2.0",
+    "hammerjs": "^2.0.8",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "nes.css": "^2.2.1",
@@ -23,6 +24,7 @@
     "react-audio-player": "^0.11.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.10.2",
+    "react-hammerjs": "^1.0.1",
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
@@ -49,7 +51,7 @@
     "file-loader": "^4.2.0",
     "mocha": "^6.2.2",
     "mocha-loader": "^4.0.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "nyc": "^14.1.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
