--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "hammerjs": "^2.0.8",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
