--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
     "socket.io": "^2.3.0",
     "nyc": "^14.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "minimist": "^1.2.5"
+  }
 }
